crates/gpui-form/tests/ui/fail/array_id_to_form_item_id.rs
#[derive(Clone, PartialEq, gpui_form::FormStore)]
struct Row {
    row_id: String,
}

#[derive(Clone, PartialEq, gpui_form::FormStore)]
struct Root {
    #[form(array(id = "row_id"))]
    rows: Vec<Row>,
}

fn main() {}
